scrollbar in window content fix

--- a/src/screen_parts/desktop/Window_contents/common/Project_card.module.css
+++ b/src/screen_parts/desktop/Window_contents/common/Project_card.module.css
@@ -2,4 +2,16 @@
   width: 100%;
   background-color: #4ebbfa;
   border-radius: 5px;
+  padding: 1rem;
+}
+.title{
+  height: 1.5rem;
+  font-size: 1.2rem;
+  color: rgb(255, 255, 255);
+}
+.fade_line {
+  height: 1px;
+  width: 100%;
+  margin: 0 auto;
+  background-image: linear-gradient(to right,rgba(255, 255, 255, 0) 0%, rgb(0, 174, 255) 30%, rgb(0, 174, 255) 70%, rgba(255, 255, 255, 0) 100%);
 }
